// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Prodeology's identify destination action: all fields 1`] = `
Object {
  "anonymousId": "[0xsdYE9W(c$m",
  "messageId": "[0xsdYE9W(c$m",
  "timestamp": Any<String>,
  "traits": Object {
    "testType": "[0xsdYE9W(c$m",
  },
  "userId": "[0xsdYE9W(c$m",
}
`;

exports[`Testing snapshot for Prodeology's identify destination action: required fields 1`] = `
Object {
  "messageId": "[0xsdYE9W(c$m",
  "timestamp": Any<String>,
}
`;
